--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">MediFacil</string>
+    <string name="otroMedicamentoActivity">Otro Medicamento</string>
     <string name="title_medi">Medicamentos</string>
     <string name="title_nuevo">Nuevo Medicamento</string>
 </resources>
